--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
-  cached_network_image: ^0.5.1
+  cached_network_image: ^0.8.0
   flutter_webview_plugin: ^0.3.0+2
   url_launcher: ^4.2.0+1
   html: ^0.13.3+3
+  sqflite: ^1.1.5
+  flutter_stetho: ^0.2.2
 
 
 
@@ -34,8 +36,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+  - assets/ArFlex.db
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
