--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
-  cached_network_image: ^0.5.1
-  flutter_webview_plugin: ^0.3.0+2
-  url_launcher: ^4.2.0+1
-  html: ^0.13.3+3
-  facebook_audience_network: ^0.3.2
+  cached_network_image: ^2.2.0+1
+  flutter_webview_plugin: ^0.3.11
+  url_launcher: ^5.4.10
+  html: ^0.14.0+3
 
 
 
